--- a/apps/convert-json-api/package.json
+++ b/apps/convert-json-api/package.json
@@ -66,6 +66,13 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "main.ts",
+      ".module.ts",
+      ".configuration.ts",
+      ".dto.ts"
+    ]
   }
 }
