--- a/apps/mail-parser-api/package.json
+++ b/apps/mail-parser-api/package.json
@@ -24,6 +24,8 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.6.2",
+    "mailparser": "^3.6.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -65,6 +67,13 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "main.ts",
+      ".module.ts",
+      ".configuration.ts",
+      ".dto.ts"
+    ]
   }
 }
